iac/kustomize/keycloak/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.home.bradandmarsha.com
    external-dns.alpha.kubernetes.io/target: home.bradandmarsha.com
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.home.bradandmarsha.com
      secretName: keycloak-certificate
  rules:
    - host: auth.home.bradandmarsha.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
